Added an unfinished Projects page

--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,34 @@ main {
     font-size: 16pt;
 }
 
+.project-item-div {
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
+    border-bottom-width: 1px;
+    border-bottom-style: outset;
+    border-top-width: 1px;
+    border-top-style: ridge;
+    flex-direction: row;
+    display: flex;
+}
+
+.project-item-div:hover {
+    background-color:  #eebecd;
+}
+
+.project-item-div a{
+    color: #111;
+}
+
+.project-item-infotext {
+    margin-left: 10px;
+}
+
+.project-item-infotext {
+    color: #111;
+}
+
 /* Hide the link that should open and close the topnav on small screens */
 .top-nav .icon {
     display: none;
